--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "@vitejs/plugin-react": "^1.3.2",
+    "eslint": "^8.16.0",
+    "eslint-plugin-react": "^7.30.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
