--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "6",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "vite-plugin-checker": "^0.4.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
