--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "6",
+    "react-spring": "^9.4.5",
     "styled-components": "^5.3.5",
     "typewriter-effect": "^2.18.2",
     "vite-plugin-checker": "^0.4.6"
