--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-spring": "^9.4.5",
     "styled-components": "^5.3.5",
@@ -17,6 +17,7 @@
     "vite-plugin-checker": "^0.4.6"
   },
   "devDependencies": {
+    "@types/node": "^18.6.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
@@ -24,6 +25,7 @@
     "@typescript-eslint/parser": "^5.26.0",
     "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^8.16.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.30.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
