--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,7 +2,12 @@
   "compilerOptions": {
     "composite": true,
     "module": "esnext",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "paths": {
+      "@/*": ["./src"]
+    }
   },
   "include": ["vite.config.ts"]
 }
