--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/parallax": "^9.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
