--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-spring": "^9.4.5",
     "styled-components": "^5.3.5",
     "typewriter-effect": "^2.18.2",
-    "vite-plugin-checker": "^0.4.6"
+    "vite-plugin-checker": "^0.4.6",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^18.6.1",
