--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -85,6 +85,6 @@
         "prop": "parens-new-line"
       }
     ],
-    "@typescript-eslint/indent": ["error", 2]
+    "@typescript-eslint/indent": ["off"]
   }
 }
