--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-spring": "^9.4.5",
     "styled-components": "^5.3.5",
     "typewriter-effect": "^2.18.2",
-    "vite-plugin-checker": "^0.4.6",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
@@ -32,6 +31,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.30.0",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vite-plugin-checker": "^0.5.6"
   }
 }
