feat: add contactForm

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "vite"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.1",
     "@react-spring/parallax": "^9.5.5",
     "parallax-js": "^3.1.0",
     "react": "^17.0.2",
