--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^7.30.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
-    "vite-plugin-checker": "^0.5.6"
+    "vite-plugin-checker": "^0.5.6",
+    "vite-plugin-radar": "^0.7.0"
   }
 }
