--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-spring/parallax": "^9.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "6",
+    "react-router-dom": "^6.10.0",
     "styled-components": "^5.3.5",
     "typewriter-effect": "^2.18.2",
     "zustand": "^4.3.6"
